--- a/initiatives/case-cloud-migration-modernisation.html
+++ b/initiatives/case-cloud-migration-modernisation.html
@@ -31,7 +31,7 @@
 <main id="main" class="container">
 <div class="case-page">
 
-<a class="case-back" href="/insights/">← Back</a>
+<a class="case-back" href="/initiatives/">← Back</a>
 
 <h1>Azure Hybrid Migration & Workload Modernization</h1>
 <p class="subtitle">Cloud Solutions Architecture | Azure | DevOps | Kubernetes</p>
@@ -183,7 +183,7 @@ The projected outcome included approximately 20% infrastructure cost reduction a
 <nav id="articleNav" style="display:flex; justify-content:space-between; gap:20px;"></nav>
 
 <script>
-fetch('../data/articles.json')
+fetch('../data/initiatives.json')
   .then(res => res.json())
   .then(articles => {
     const currentPath = window.location.pathname.split('/').pop();
