--- a/initiatives/case-cloud-migration-modernisation.html
+++ b/initiatives/case-cloud-migration-modernisation.html
@@ -22,7 +22,7 @@
 <link rel="stylesheet" href="/css/utilities.css" />
 
 <title>Azure Hybrid Migration & Workload Modernization | Case Study</title>
-<meta name="description" content="Azure hybrid cloud migration and workload modernization case study covering VM rehosting, App Services, AKS, Terraform, and Azure DevOps automation." />
+<meta name="description" content="Azure hybrid cloud migration and workload modernization case study covering VM rehosting, App Services, AKS, Terraform, Azure DevOps automation, and cost engineering." />
 </head>
 
 <body>
@@ -47,15 +47,15 @@
 </figure>
 
 <p>
-This engagement focused on migrating and modernizing a revenue-generating business unit’s application landscape from on-premises infrastructure to Microsoft Azure using a secure hybrid connectivity model.
+Architected and delivered a business unit–specific migration from on-premises infrastructure to Microsoft Azure using a secure hybrid connectivity model. The solution aligned with the client’s enterprise landing zone and governance standards while enabling scalable application patterns and automated delivery pipelines.
 </p>
 
 <p>
-The objective was not only infrastructure relocation, but enabling scalable architecture patterns, automated delivery pipelines, and improved cost governance.
+This initiative focused not only on infrastructure relocation, but on enabling long-term scalability, DevOps-driven deployment workflows, and improved cost transparency.
 </p>
 
 <blockquote class="signature-quote">
-Migration speed was balanced with architectural integrity and long-term scalability.
+Migration speed was balanced with architectural integrity, governance alignment, and long-term scalability.
 </blockquote>
 
 <h2>Scope & Environment</h2>
@@ -64,69 +64,72 @@ Migration speed was balanced with architectural integrity and long-term scalabil
   <li>35+ business-critical applications</li>
   <li>250+ virtual machines</li>
   <li>15+ databases</li>
-  <li>Hybrid Azure + on-prem connectivity</li>
-  <li>Multi-environment setup (Dev / QA / Prod)</li>
+  <li>Hybrid Azure + on-prem integration</li>
+  <li>Dev / QA / Prod environment segregation</li>
 </ul>
 
 <h2>Hybrid Architecture Design</h2>
 
 <p>
-The target architecture was designed using a hub-spoke network topology with secure connectivity to on-prem systems via VPN / ExpressRoute.
+The target architecture leveraged a hub-spoke network topology with secure VPN / ExpressRoute connectivity to on-prem systems. The design ensured integration with enterprise identity and compliance guardrails.
 </p>
 
 <ul>
   <li>Environment isolation across Dev, QA, and Production</li>
   <li>Azure AD integration with enterprise identity</li>
   <li>Role-Based Access Control (RBAC)</li>
-  <li>Azure Policy guardrails</li>
+  <li>Azure Policy governance enforcement</li>
   <li>Centralized logging and monitoring</li>
 </ul>
 
 <p>
-This approach ensured secure integration with legacy systems while enabling independent cloud scaling.
+This approach enabled secure communication with legacy systems while allowing independent scaling of cloud workloads.
 </p>
 
 <h2>Workload Migration Strategy</h2>
 
 <p>
-Applications were evaluated individually and aligned to the most appropriate Azure hosting model.
+Applications were assessed individually and aligned to the most appropriate Azure hosting model. Migration was executed in phased waves to minimize business disruption.
 </p>
 
 <ul>
-  <li><strong>Rehost – Azure Virtual Machines:</strong> Legacy tightly coupled applications requiring minimal code change.</li>
-  <li><strong>Replatform – Azure App Services:</strong> Web and API workloads benefiting from managed runtime services.</li>
-  <li><strong>Modernize – Azure Kubernetes Service (AKS):</strong> Containerized services requiring elastic scaling and resilience.</li>
+  <li><strong>Rehost – Azure Virtual Machines:</strong> Legacy tightly coupled workloads migrated with minimal refactoring to reduce risk.</li>
+  <li><strong>Replatform – Azure App Services:</strong> Web and API workloads transitioned to managed runtime services to reduce operational overhead.</li>
+  <li><strong>Modernize – Azure Kubernetes Service (AKS):</strong> Containerized services requiring elastic scaling and improved resilience.</li>
 </ul>
 
 <p>
-This selective modernization avoided unnecessary refactoring while enabling scalability for growth-critical services.
+This selective modernization balanced delivery velocity with long-term architectural sustainability.
 </p>
 
-<h2>Kubernetes Adoption</h2>
+<h2>Cloud-Native & Event-Driven Enhancements</h2>
+
+<p>
+To reduce infrastructure management overhead and improve system decoupling, Azure-native services were selectively adopted across applicable workloads:
+</p>
 
 <ul>
-  <li>Containerization of targeted services</li>
-  <li>Deployment to Azure Kubernetes Service (AKS)</li>
-  <li>Horizontal Pod Autoscaling (HPA)</li>
-  <li>Blue-green and rolling deployment strategies</li>
-  <li>Security integration within CI/CD workflows</li>
+  <li>Event-driven integration using Azure Functions and Event Grid</li>
+  <li>Workflow orchestration via Logic Apps</li>
+  <li>Managed database services for reliability and automated patching</li>
+  <li>Secure configuration and monitoring capabilities</li>
 </ul>
 
 <p>
-AKS was introduced selectively where scalability and resilience requirements justified container orchestration.
+These enhancements improved maintainability while supporting scalable, loosely coupled system design.
 </p>
 
 <h2>DevOps & Infrastructure Automation</h2>
 
 <p>
-Infrastructure provisioning and deployment automation were central to the transformation.
+Infrastructure provisioning and application deployment automation were foundational to the transformation.
 </p>
 
 <ul>
   <li>Infrastructure as Code using Terraform</li>
-  <li>Reusable Terraform modules for environment consistency</li>
+  <li>Reusable Terraform modules ensuring environment consistency</li>
   <li>CI/CD pipelines implemented in Azure DevOps</li>
-  <li>Automated validation and promotion workflows</li>
+  <li>Automated validation gates and environment promotion workflows</li>
   <li>Reduced manual deployment dependencies</li>
 </ul>
 
@@ -137,7 +140,7 @@ Infrastructure provisioning time reduced from several weeks to under two hours.
 <h2>Cost Engineering & TCO Analysis</h2>
 
 <p>
-Total Cost of Ownership analysis was conducted for critical workloads using Azure cost modeling tools.
+Total Cost of Ownership analysis was conducted for critical workloads using Azure cost modeling tools to support executive decision-making.
 </p>
 
 <ul>
@@ -164,19 +167,20 @@ The projected outcome included approximately 20% infrastructure cost reduction a
 <h2>Architectural Trade-Offs</h2>
 
 <ul>
-  <li>Rehosted legacy systems to reduce migration risk</li>
-  <li>Adopted App Services to minimize operational overhead</li>
-  <li>Selected AKS selectively based on scalability needs</li>
-  <li>Executed phased migration to avoid business disruption</li>
+  <li>Rehosted legacy systems to minimize migration risk</li>
+  <li>Adopted App Services to reduce operational overhead</li>
+  <li>Introduced AKS selectively based on scalability requirements</li>
+  <li>Executed phased migration to prevent business disruption</li>
+  <li>Prioritized early cost modeling to align with financial stakeholders</li>
 </ul>
 
 <h2>Lessons Learned</h2>
 
 <ul>
-  <li>Early network validation is critical in hybrid architectures</li>
-  <li>Containerization suitability must be assessed per workload</li>
-  <li>Phased modernization reduces operational risk</li>
-  <li>Early cost modeling strengthens executive alignment</li>
+  <li>Early hybrid network validation prevents routing and latency issues</li>
+  <li>Containerization readiness must be evaluated per workload</li>
+  <li>Phased modernization reduces operational and organizational risk</li>
+  <li>Cost modeling during design strengthens executive confidence</li>
 </ul>
 
 <hr style="margin:50px 0; opacity:0.2;">
