--- a/initiatives/case-cloud-migration-modernisation.html
+++ b/initiatives/case-cloud-migration-modernisation.html
@@ -22,7 +22,7 @@
 <link rel="stylesheet" href="/css/utilities.css" />
 
 <title>Azure Hybrid Migration & Workload Modernization | Case Study</title>
-<meta name="description" content="Azure hybrid cloud migration and workload modernization case study covering VM rehosting, App Services, AKS, Terraform, Azure DevOps automation, and cost engineering." />
+<meta name="description" content="Azure hybrid cloud migration and workload modernization case study covering workload assessment, VM rehosting, App Services, AKS, Terraform, Azure DevOps automation, and cost engineering." />
 </head>
 
 <body>
@@ -47,21 +47,43 @@
 </figure>
 
 <p>
-Architected and delivered a business unit–specific migration from on-premises infrastructure to Microsoft Azure using a secure hybrid connectivity model. The solution aligned with the client’s enterprise landing zone and governance standards while enabling scalable application patterns and automated delivery pipelines.
+Architected and delivered cloud migration and modernization initiatives for selected projects within a broader business unit transformation program. The solution aligned with the client’s enterprise landing zone and governance standards while enabling scalable application patterns, DevOps-driven automation, and improved cost transparency.
 </p>
 
 <p>
-This initiative focused not only on infrastructure relocation, but on enabling long-term scalability, DevOps-driven deployment workflows, and improved cost transparency.
+The objective extended beyond infrastructure relocation to establishing sustainable cloud architecture foundations for long-term scalability and operational efficiency.
 </p>
 
 <blockquote class="signature-quote">
 Migration speed was balanced with architectural integrity, governance alignment, and long-term scalability.
 </blockquote>
 
+<h2>My Role & Responsibilities</h2>
+
+<p>
+I was a contributing Cloud Solutions Architect within the broader migration program, leading architecture design for selected projects within the business unit scope.
+</p>
+
+<ul>
+  <li>Conducted initial workload assessments, evaluating architecture, dependencies, and cloud readiness</li>
+  <li>Owned workload classification (rehost, replatform, modernize) for assigned applications</li>
+  <li>Designed target-state Azure architecture for the projects I led</li>
+  <li>Defined hybrid connectivity integration for assigned workloads</li>
+  <li>Recommended hosting models (VM, App Service, AKS) based on application characteristics</li>
+  <li>Presented architecture designs and migration strategies to business and technology stakeholders</li>
+  <li>Aligned designs with enterprise architecture and governance standards</li>
+  <li>Coordinated with security, network, DevOps, and infrastructure teams from design through production go-live</li>
+  <li>Conducted TCO analysis for critical applications within my project scope</li>
+</ul>
+
+<p>
+For the workloads I led, I acted as the solution design authority from assessment through production deployment.
+</p>
+
 <h2>Scope & Environment</h2>
 
 <ul>
-  <li>35+ business-critical applications</li>
+  <li>35+ business-critical applications across the business unit</li>
   <li>250+ virtual machines</li>
   <li>15+ databases</li>
   <li>Hybrid Azure + on-prem integration</li>
@@ -71,7 +93,7 @@ Migration speed was balanced with architectural integrity, governance alignment,
 <h2>Hybrid Architecture Design</h2>
 
 <p>
-The target architecture leveraged a hub-spoke network topology with secure VPN / ExpressRoute connectivity to on-prem systems. The design ensured integration with enterprise identity and compliance guardrails.
+The target architecture leveraged a hub-spoke network topology with secure VPN / ExpressRoute connectivity to on-prem systems, ensuring alignment with enterprise identity and compliance guardrails.
 </p>
 
 <ul>
@@ -81,10 +103,6 @@ The target architecture leveraged a hub-spoke network topology with secure VPN /
   <li>Azure Policy governance enforcement</li>
   <li>Centralized logging and monitoring</li>
 </ul>
-
-<p>
-This approach enabled secure communication with legacy systems while allowing independent scaling of cloud workloads.
-</p>
 
 <h2>Workload Migration Strategy</h2>
 
@@ -102,11 +120,18 @@ Applications were assessed individually and aligned to the most appropriate Azur
 This selective modernization balanced delivery velocity with long-term architectural sustainability.
 </p>
 
-<h2>Cloud-Native & Event-Driven Enhancements</h2>
+<h2>Architectural Patterns Applied</h2>
 
-<p>
-To reduce infrastructure management overhead and improve system decoupling, Azure-native services were selectively adopted across applicable workloads:
-</p>
+<ul>
+  <li><strong>Hub-Spoke Network Architecture</strong> for secure hybrid connectivity and environment isolation</li>
+  <li><strong>Hybrid Cloud Pattern</strong> enabling controlled integration with on-prem systems</li>
+  <li><strong>Incremental Modernization (Strangler) Approach</strong> to reduce migration risk</li>
+  <li><strong>Containerized Microservices Pattern</strong> for scalable workloads on AKS</li>
+  <li><strong>Event-Driven Integration Pattern</strong> using serverless and messaging services</li>
+  <li><strong>Infrastructure as Code Pattern</strong> to ensure environment consistency</li>
+</ul>
+
+<h2>Cloud-Native & Event-Driven Enhancements</h2>
 
 <ul>
   <li>Event-driven integration using Azure Functions and Event Grid</li>
@@ -115,33 +140,17 @@ To reduce infrastructure management overhead and improve system decoupling, Azur
   <li>Secure configuration and monitoring capabilities</li>
 </ul>
 
-<p>
-These enhancements improved maintainability while supporting scalable, loosely coupled system design.
-</p>
-
 <h2>DevOps & Infrastructure Automation</h2>
-
-<p>
-Infrastructure provisioning and application deployment automation were foundational to the transformation.
-</p>
 
 <ul>
   <li>Infrastructure as Code using Terraform</li>
   <li>Reusable Terraform modules ensuring environment consistency</li>
   <li>CI/CD pipelines implemented in Azure DevOps</li>
-  <li>Automated validation gates and environment promotion workflows</li>
+  <li>Automated validation gates and promotion workflows</li>
   <li>Reduced manual deployment dependencies</li>
 </ul>
 
-<p>
-Infrastructure provisioning time reduced from several weeks to under two hours.
-</p>
-
 <h2>Cost Engineering & TCO Analysis</h2>
-
-<p>
-Total Cost of Ownership analysis was conducted for critical workloads using Azure cost modeling tools to support executive decision-making.
-</p>
 
 <ul>
   <li>5-year CapEx vs OpEx comparison</li>
@@ -149,10 +158,6 @@ Total Cost of Ownership analysis was conducted for critical workloads using Azur
   <li>Reserved Instance strategy for stable workloads</li>
   <li>Tagging framework for business unit-level cost visibility</li>
 </ul>
-
-<p>
-The projected outcome included approximately 20% infrastructure cost reduction and avoidance of hardware refresh investments.
-</p>
 
 <h2>Measured Outcomes</h2>
 
